Fix : Css alignment

--- a/src/components/navigation-menu/navigation-menu.module.css
+++ b/src/components/navigation-menu/navigation-menu.module.css
@@ -28,7 +28,7 @@
 }
 .navLogo {
   height: 26px;
-  margin-right: 24px;
+  margin-right: 27px;
   margin-left: 24px;
   width: 26px;
 }
